trying instructions from spotify

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
 </head>
 <body>
+    <div class="title">Spotify Practice</div>
+    <div class="info-display">
+
+    </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="config.js"></script>
     <script src="scripts.js"></script>
